# localforge

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json  pyproject.toml
.openai/: hosting.json
app/: globals.css  layout.tsx  studio.tsx
docs/: ARCHITECTURE.md  MODEL_WORKFLOW.md  SECURITY.md
examples/: support-mini.jsonl
presets/: qwen-0.5b-low-memory.json  qwen-3b-12gb.json  qwen-7b-24gb.json
src/localforge/: __init__.py  api.py  cli.py  dataset_inspector.py  evaluation.py  jobs.py  packaging.py  planner.py  recipes.py  schemas.py  train.py
tests/: rendered-html.test.mjs  test_api.py  test_dataset_inspector.py  test_evaluation.py  test_packaging.py  test_planner.py
