[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "localforge"
version = "0.1.0"
description = "Private, local-first model tuning, evaluation, and deployment orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "RoUchiha" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "rich>=13.9,<15",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1; platform_system != 'Darwin'",
  "datasets>=3.2,<5",
  "peft>=0.14,<1",
  "torch>=2.5,<3",
  "transformers>=4.48,<6",
  "trl>=0.24,<1",
]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1"]

[project.scripts]
localforge = "localforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/localforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

